[package]
name = "Solana_Helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["alphanetra0321@gmail.com"]
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.9.4"

[dev-dependencies]
solana-program-test = "=1.9.4"
solana-sdk = "=1.9.4"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]